# Cross-platform-OpenGL-example

./: CMakeLists.txt  androidbuild.sh  embuild.sh  linuxbuild.sh  windowsbuild.sh
Android/OpenGL/app/: build.gradle
Android/OpenGL/app/src/androidTest/java/com/ni55an/opengl_example/: ExampleInstrumentedTest.java
Android/OpenGL/app/src/main/: AndroidManifest.xml
Android/OpenGL/app/src/main/java/com/ni55an/opengl_example/: MainActivity.java  NativeOpenGLSurface.java
Android/OpenGL/app/src/main/res/values/: strings.xml
Android/OpenGL/app/src/test/java/com/ni55an/opengl_example/: ExampleUnitTest.java
Web/: opengl_example.html
src/: android.cpp  desktop.cpp  emscripten.cpp  main.cpp
